Fixed apis
